[package]
name = "corpus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binary-layout = "3.1.3"
chrono = { version = "0.4.26", default-features = false, features = ["serde"] }
thiserror = "1.0.44"
