[package]
name = "corpus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binary-layout = "3.2.0"
chrono = { version = "0.4.26", default-features = false, features = ["serde"] }
enum-iterator = "1.4.1"
marble = "15.0.7"
memmap = "0.7.0"
minicbor = { version = "0.19.1", features = ["std", "derive"] }
num = "0.4.1"
num-derive = "0.4.0"
num-traits = "0.2.16"
num_enum = "0.6.1"
serde = "1.0.183"
serde_derive = "1.0.183"
serde_json = "1.0.104"
thiserror = "1.0.44"
